--- a/plugins/extsearch/extsearch.css
+++ b/plugins/extsearch/extsearch.css
@@ -17,6 +17,7 @@
 .EngineFeedTheNet {background-image: url(./images/feedthenet.png); background-repeat: no-repeat}
 .EngineBitMeTV {background-image: url(./images/bitmetv.png); background-repeat: no-repeat}
 .EngineTorrentLeech {background-image: url(./images/torrentleech.png); background-repeat: no-repeat}
+.EngineRevolutionTT {background-image: url(./images/revolutiontt.png); background-repeat: no-repeat}
 
 div#tegLoadTorrents #RSSBtn {width: 30px;}
 div#tegLoadTorrents {width: 380px; height: 180px; overflow: visible}
