--- a/plugins/extsearch/extsearch.css
+++ b/plugins/extsearch/extsearch.css
@@ -19,6 +19,7 @@
 .EngineTorrentLeech {background-image: url(./images/torrentleech.png); background-repeat: no-repeat}
 .EngineRevolutionTT {background-image: url(./images/revolutiontt.png); background-repeat: no-repeat}
 .EngineSceneAccess {background-image: url(./images/sceneaccess.png); background-repeat: no-repeat}
+.EngineDemonoid {background-image: url(./images/demonoid.png); background-repeat: no-repeat}
 
 div#tegLoadTorrents #RSSBtn {width: 30px;}
 div#tegLoadTorrents {width: 380px; height: 180px; overflow: visible}
