--- a/plugins/extsearch/extsearch.css
+++ b/plugins/extsearch/extsearch.css
@@ -20,7 +20,7 @@
 .EngineRevolutionTT {background-image: url(./images/revolutiontt.png); background-repeat: no-repeat}
 .EngineSceneAccess {background-image: url(./images/sceneaccess.png); background-repeat: no-repeat}
 .EngineDemonoid {background-image: url(./images/demonoid.png); background-repeat: no-repeat}
-.EngineBroadCastle {background-image: url(./images/broadcastle.png); background-repeat: no-repeat}
+.EngineBroadcasThe {background-image: url(./images/broadcasthe.png); background-repeat: no-repeat}
 
 div#tegLoadTorrents #RSSBtn {width: 30px;}
 div#tegLoadTorrents {width: 380px; height: 180px; overflow: visible}
