--- a/plugins/theme/themes/Blue/style.css
+++ b/plugins/theme/themes/Blue/style.css
@@ -29,7 +29,7 @@ ul#tabbar li.selected a { border-top: 2px solid #8DB2E3; background: transparent
 
 input.Button { background-image: url(./images/btn-sprite.gif); background-position: 0 -43px }
 
-input[type="text"], input[type="password"], input[type="file"], select, textarea { background: transparent url(./images/text-bg.gif) repeat-x 0 0; border:1px solid #B5B8C8; }
+input[type="text"], input[type="password"], input[type="file"], select, textarea { background: #FFFFFF url(./images/text-bg.gif) repeat-x 0 0; border:1px solid #B5B8C8; }
 input[type="text"][disabled],input[type="password"][disabled],input[type="file"][disabled], select[disabled], textarea[disabled] { border: 1px solid #C0C0C0; background: #F0F0F0; color: #C0C0C0}
 
 .catpanel {background-color: #D9E8FB; color: #15428B; font-weight: bold; border: 1px solid #8DB2E3; background-image: url(./images/pnl_open.gif) }
