--- a/plugins/extsearch/extsearch.css
+++ b/plugins/extsearch/extsearch.css
@@ -12,15 +12,17 @@
 .EngineTorrentReactor {background-image: url(./images/torrentreactor.png); background-repeat: no-repeat}
 .EngineTorrentZap {background-image: url(./images/torrentzap.png); background-repeat: no-repeat}
 .EngineVector {background-image: url(./images/vertor.png); background-repeat: no-repeat}
-.EngineFreshOn {background-image: url(./images/freshon.png); background-repeat: no-repeat}
+.EngineTvT {background-image: url(./images/freshon.png); background-repeat: no-repeat}
 .EngineWhatCD {background-image: url(./images/whatcd.png); background-repeat: no-repeat}
-.EngineFeedTheNet {background-image: url(./images/feedthenet.png); background-repeat: no-repeat}
+.EngineFtN {background-image: url(./images/feedthenet.png); background-repeat: no-repeat}
 .EngineBitMeTV {background-image: url(./images/bitmetv.png); background-repeat: no-repeat}
 .EngineTorrentLeech {background-image: url(./images/torrentleech.png); background-repeat: no-repeat}
-.EngineRevolutionTT {background-image: url(./images/revolutiontt.png); background-repeat: no-repeat}
-.EngineSceneAccess {background-image: url(./images/sceneaccess.png); background-repeat: no-repeat}
+.EngineRevTT {background-image: url(./images/revolutiontt.png); background-repeat: no-repeat}
+.EngineScC {background-image: url(./images/sceneaccess.png); background-repeat: no-repeat}
 .EngineDemonoid {background-image: url(./images/demonoid.png); background-repeat: no-repeat}
 .EngineBroadcasThe {background-image: url(./images/broadcasthe.png); background-repeat: no-repeat}
+.EngineBitHDTV {background-image: url(./images/bit-hdtv.png); background-repeat: no-repeat}
+.EngineBitMe {background-image: url(./images/bitme.png); background-repeat: no-repeat}
 
 div#tegLoadTorrents #RSSBtn {width: 30px;}
 div#tegLoadTorrents {width: 380px; height: 180px; overflow: visible}
