add PtP engine to extsearch plugin

--- a/plugins/extsearch/extsearch.css
+++ b/plugins/extsearch/extsearch.css
@@ -24,6 +24,8 @@
 .EngineBitHDTV {background-image: url(./images/bit-hdtv.png); background-repeat: no-repeat}
 .EngineBitMe {background-image: url(./images/bitme.png); background-repeat: no-repeat}
 .EngineSceneHD {background-image: url(./images/scenehd.png); background-repeat: no-repeat}
+.EnginePtP {background-image: url(./images/passthepopcorn.png); background-repeat: no-repeat}
+.EngineAwesomeHD {background-image: url(./images/awesome-hd.png); background-repeat: no-repeat}
 
 div#tegLoadTorrents #RSSBtn {width: 30px;}
 div#tegLoadTorrents {width: 380px; height: 180px; overflow: visible}
